# kubectl-gat

./: Cargo.toml  LICENSE  README.md
src/: main.rs
