[package]
name = "kubectl-gat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
humantime = "2.1.0"
iso8601 = "0.6.1"
regex = "1.10.3"
serde = "1.0.196"
serde_json = "1.0"
tabled = "0.15.0"
